@@ -166,6 +166,8 @@ namespace Ipopt
     //                        pardiso_out_of_core_power, prefix);
     options.GetBoolValue("pardiso_skip_inertia_check",
                          skip_inertia_check_, prefix);
+    int max_iterref_steps;
+    options.GetIntegerValue("pardiso_max_iterative_refinement_steps", max_iterref_steps, prefix);
 
     // PD system
     options.GetIntegerValue("pardiso_max_iter", pardiso_max_iter_, prefix);
@@ -210,6 +212,8 @@ namespace Ipopt
 
     int pardiso_msglvl;
     options.GetIntegerValue("pardiso_msglvl", pardiso_msglvl, prefix);
+    int order;
+    options.GetEnumValue("pardiso_order", order, prefix);
     options.GetIntegerValue("pardiso_max_droptol_corrections",
                             pardiso_max_droptol_corrections_, prefix);
 
@@ -276,11 +280,9 @@ namespace Ipopt
     IPARM_[2] = 1;
 #endif
 
-    IPARM_[1] = 5;
+    IPARM_[1] = order;
     IPARM_[5] = 1;  // Overwrite right-hand side
-    // ToDo: decide if we need iterative refinement in Pardiso.  For
-    // now, switch it off ?
-    IPARM_[7] = 0;
+    IPARM_[7] = max_iterref_steps;
 
     // Options suggested by Olaf Schenk
     IPARM_[9] = 12;
